third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/table/duplicate-key-dotted-table.stderr
TOML parse error at line 4, column 1
  |
4 | [fruit.apple] # INVALID
  | ^
invalid table header
duplicate key `apple` in table `fruit`
